--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,3 +20,19 @@
   display: flex;
   flex-direction: column;
 }
+.button-edit{
+  margin-right: 10px;
+ 
+}
+.button-edit a{
+text-decoration: none;
+color: black;}
+
+.form-content{
+  width: 80%;
+  padding: 10px;
+}
+
+.ReactTable.-highlight .rt-tbody .rt-tr:not(.-padRow):hover {
+  background-color: rgba(247, 247, 247, 0.05) !important;
+}
